--- a/config/camus_recall.properties
+++ b/config/camus_recall.properties
@@ -17,7 +17,7 @@ camus.message.encoder.class=com.linkedin.camus.etl.kafka.common.StringRecordWrit
 etl.record.writer.provider.class=com.linkedin.camus.etl.kafka.common.StringRecordWriterProvider
 
 # Concrete implementation of the Decoder class to use
-camus.message.decoder.class=com.linkedin.camus.etl.kafka.coders.JsonStringMessageDecoder
+camus.message.decoder.class=com.linkedin.camus.etl.kafka.coders.StringMessageDecoder
 
 # Used by avro-based Decoders to use as their Schema Registry
 #kafka.message.coder.schema.registry.class=com.linkedin.camus.example.DummySchemaRegistry
