update config and build.sh

--- a/config/camus_action_init.properties
+++ b/config/camus_action_init.properties
@@ -44,6 +44,7 @@ kafka.max.pull.minutes.per.task=-1
 # if whitelist has values, only whitelisted topic are pulled.  nothing on the blacklist is pulled
 #kafka.blacklist.topics=
 kafka.whitelist.topics=0_action,1_action,2_action,3_action,4_action,5_action,6_action,7_action,8_action
+kafka.move.to.last.offset.list=0_action,1_action,2_action,3_action,4_action,5_action,6_action,7_action,8_action
 log4j.configuration=true
 
 # Name of the client as seen by kafka
