--- a/config/camus_recall_init.properties
+++ b/config/camus_recall_init.properties
@@ -1,11 +1,11 @@
 # Needed Camus properties, more cleanup to come
 
 # final top-level data output directory, sub-directory will be dynamically created for each topic pulled
-etl.destination.path=/camus/action/
+etl.destination.path=/camus/recall/
 # HDFS location where you want to keep execution files, i.e. offsets, error logs, and count files
-etl.execution.base.path=/camus/execution/action
+etl.execution.base.path=/camus/execution/recall
 # where completed Camus job output directories are kept, usually a sub-dir in the base.path
-etl.execution.history.path=/camus/execution/action/history
+etl.execution.history.path=/camus/execution/recall/history
 
 # Kafka-0.8 handles all zookeeper calls
 #zookeeper.hosts=
@@ -24,7 +24,7 @@ camus.message.decoder.class=com.linkedin.camus.etl.kafka.coders.StringMessageDec
 
 # Used by the committer to arrange .avro files into a partitioned scheme. This will be the default partitioner for all
 # topic that do not have a partitioner specified
-etl.partitioner.class=com.linkedin.camus.example.partitioner.HourlyPartitioner
+etl.partitioner.class=com.linkedin.camus.example.partitioner.DailyPartitioner
 
 # Partitioners can also be set on a per-topic basis
 #etl.partitioner.class.<topic-name>=com.your.custom.CustomPartitioner
@@ -33,7 +33,7 @@ etl.partitioner.class=com.linkedin.camus.example.partitioner.HourlyPartitioner
 # hdfs.default.classpath.dir=
 
 # max hadoop tasks to use, each task can pull multiple topic partitions
-mapred.map.tasks=6
+mapred.map.tasks=3
 # max historical time that will be pulled from each partition based on event timestamp
 kafka.max.pull.hrs=-1
 # events with a timestamp older than this will be discarded. 
@@ -43,7 +43,8 @@ kafka.max.pull.minutes.per.task=-1
 
 # if whitelist has values, only whitelisted topic are pulled.  nothing on the blacklist is pulled
 #kafka.blacklist.topics=
-kafka.whitelist.topics=0_action,1_action,2_action,3_action,4_action,5_action,6_action,7_action,8_action
+kafka.whitelist.topics=recommend_log_after_cleansing
+kafka.move.to.last.offset.list=recommend_log_after_cleansing
 log4j.configuration=true
 
 # Name of the client as seen by kafka
